Updated by kodi-game-scripting
https://github.com/kodi-game/kodi-game-scripting/

--- a/game.libretro.dosbox/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.dosbox/resources/language/resource.language.en_gb/strings.po
@@ -24,9 +24,7 @@ msgctxt "Addon Description"
 msgid "DOSBox emulates an IBM PC compatible computer running MS-DOS.[CR][CR]DOSBox can be configured to run a wide range of DOS games, from CGA/Tandy/PCjr classics up to games from the Quake era."
 msgstr ""
 
-msgctxt "#30000"
-msgid "Settings"
-msgstr ""
+# Empty string with ID 30000
 
 msgctxt "#30001"
 msgid "Enable core-options"
